# Pico-CO2-Monitor

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
src/: main.rs
