[package]
name = "Pico-CO2-Monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-embedded-hal = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.4.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"] }
embassy-time = { version = "0.2", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.1.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl"] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
embassy-net = { version = "0.2.0", features = ["defmt", "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.1.0"}
cyw43 = { features = ["defmt", "firmware-logs"] }
cyw43-pio = { features = ["defmt", "overclock"] }



defmt = "0.3"
defmt-rtt = "0.4"
fixed = "1.23.1"
fixed-macro = "1.2"

#cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await", "cfg-target-has-atomic", "unstable"] }
display-interface-spi = "0.4.1"
embedded-graphics = "0.7.1"
st7789 = "0.6.1"
display-interface = "0.4.1"
byte-slice-cast = { version = "1.2.0", default-features = false }
smart-leds = "0.3.0"
heapless = "0.8"
usbd-hid = "0.6.1"

embedded-hal-1 = { package = "embedded-hal", version = "=1.0.0-rc.3" }
embedded-hal-async = "1.0.0-rc.3"
embedded-hal-bus = { version = "0.1.0-rc.3", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
embedded-storage = { version = "0.3" }
static_cell = { version = "2", features = ["nightly"]}
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
pio-proc = "0.2"
pio = "0.2.1"
rand = { version = "0.8.5", default-features = false }

[patch.crates-io]
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-net = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-net-wiznet = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
embassy-usb-logger = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
cyw43 = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }
cyw43-pio = { git = "https://github.com/embassy-rs/embassy", rev = "d832d45c0ba5f2624a5f5c1e549e2d7fe8bd0e01" }


[profile.release]
debug = 2

